<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.igormaznitsa</groupId>
  <artifactId>jprol</artifactId>
  <version>1.1.3-SNAPSHOT</version>
  <packaging>jar</packaging>

  <inceptionYear>2010</inceptionYear>

  <name>JProl</name>
  <description>Small Java-based Prolog engine with embedded GUI editor. It was developed in 2010 as a project to learn the Prolog language. It supports the Edinburgh Prolog style.</description>

  <url>https://github.com/raydac/jprol</url>

  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <netbeans.hint.license>apache20</netbeans.hint.license>
    <app.name>jprol_${project.version}</app.name>
  </properties>

  <organization>
    <name>Igor Maznitsa</name>
    <url>http://www.igormaznitsa.com</url>
  </organization>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/raydac/jprol/issues</url>
  </issueManagement>

  <scm>
    <url>https://github.com/jprol</url>
    <connection>scm:git:git://github.com/raydac/jprol.git</connection>
    <developerConnection>scm:git:git@github.com:raydac/jprol.git</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>raydac</id>
      <email>rrg4400@gmail.com</email>
      <roles>
        <role>author</role>
      </roles>
      <url>http://www.igormaznitsa.com</url>
      <timezone>+3</timezone>
    </developer>
  </developers>

  <dependencies>    
    <dependency>
      <groupId>com.fifesoft</groupId>
      <artifactId>rsyntaxtextarea</artifactId>
      <version>3.0.3</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>publish</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.1.1</version>
            <executions>
              <execution>
                <id>make-linux</id>
                <phase>install</phase>
                <goals>
                  <goal>single</goal>
                </goals>
                <configuration>
                  <appendAssemblyId>false</appendAssemblyId>
                  <finalName>jprol_${project.version}_LINUX</finalName>
                  <descriptors>
                    <descriptor>src/assemble/linux.xml</descriptor>
                  </descriptors>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>sh.tak.appbundler</groupId>
            <artifactId>appbundle-maven-plugin</artifactId>
            <version>1.2.0</version>
            <configuration>
              <bundleName>${app.name}</bundleName>
              <diskImageFile>${project.build.directory}/${project.build.finalName}_OSX.dmg</diskImageFile>
              <mainClass>com.igormaznitsa.prol.easygui.Main</mainClass>
              <iconFile>appico.icns</iconFile>
              <bundleName>JProl pad</bundleName>
              <generateDiskImageFile>true</generateDiskImageFile>
              <includeApplicationsSymlink>true</includeApplicationsSymlink>
              <diskImageInternetEnable>true</diskImageInternetEnable>
              <jvmVersion>1.8+</jvmVersion>
              <jvmOptions>
                <option>-XX:+IgnoreUnrecognizedVMOptions</option>
                <option>-XaddExports:java.desktop/com.apple.eawt=ALL-UNNAMED</option>
                <option>-Dprol.stack.depth=512m</option>
              </jvmOptions>
            </configuration>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>bundle</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>com.akathist.maven.plugins.launch4j</groupId>
            <artifactId>launch4j-maven-plugin</artifactId>
            <version>1.7.25</version>
            <executions>
              <execution>
                <id>l4j-clui</id>
                <phase>install</phase>
                <goals>
                  <goal>launch4j</goal>
                </goals>
                <configuration>
                  <headerType>gui</headerType>
                  <jar>${project.build.directory}/${app.name}.jar</jar>
                  <outfile>${project.build.directory}/${app.name}.exe</outfile>
                  <downloadUrl>http://www.oracle.com/technetwork/java/javase/downloads</downloadUrl>
                  <classPath>
                    <mainClass>com.igormaznitsa.prol.easygui.Main</mainClass>
                    <preCp>anything</preCp>
                  </classPath>
                  <icon>appico.ico</icon>
                  <jre>
                    <minVersion>1.8.0</minVersion>
                    <jdkPreference>preferJre</jdkPreference>
                    <initialHeapSize>256</initialHeapSize>
                    <maxHeapSize>1024</maxHeapSize>
                    <opts>
                      <opt>-Dprol.stack.depth=512m</opt>
                    </opts>
                  </jre>
                  <versionInfo>
                    <fileVersion>1.1.3.0</fileVersion>
                    <txtFileVersion>${project.version}</txtFileVersion>
                    <fileDescription>Prol NotePad</fileDescription>
                    <copyright>2017 Igor Maznitsa</copyright>
                    <productVersion>1.1.3.0</productVersion>
                    <txtProductVersion>${project.version}</txtProductVersion>
                    <productName>${project.name}</productName>
                    <companyName>igormaznitsa.com</companyName>
                    <internalName>${project.name}</internalName>
                    <originalFilename>${app.name}.exe</originalFilename>
                  </versionInfo>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <defaultGoal>clean install</defaultGoal>
    <finalName>${app.name}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <reportPlugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>cobertura-maven-plugin</artifactId>
              <version>2.5.1</version>
            </plugin>
          </reportPlugins>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgument>-Xlint:all</compilerArgument>
          <verbose>false</verbose>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <minimizeJar>false</minimizeJar>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>com.igormaznitsa.prol.easygui.Main</mainClass>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>animal-sniffer-maven-plugin</artifactId>
        <version>1.18</version>
        <executions>
          <execution>
            <id>ensure-java-1.8-class-library</id>
            <phase>test</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <signature>
                <groupId>org.codehaus.mojo.signature</groupId>
                <artifactId>java18</artifactId>
                <version>1.0</version>
              </signature>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

  </build>

 
</project>
